Prevent horizontal scrolling on right. Tested on chrome & safari. Need to test on mobile

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -11,6 +11,7 @@
 
 	body {
 		background: #fff;
+		overflow-x: hidden;
 	}
 
 		body.is-loading * {
